# fastapi-sample

./: .dockerignore  Dockerfile  README.md  compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  test.yml
app/: api.py  database.py  dbtest.py  logger.py  main.py  models.py  schemas.py
app/endpoints/: posts.py
